welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    		if (getCouleurSol) return true
                    ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    		if (getCouleurSol) return true
                ^